fixed header covering content

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+html{
+    scroll-padding-top: 12%;
+}
+
 body{
     background-color: #EFD6AC;
     margin: 0;
@@ -17,13 +21,11 @@ header {
     align-items: center;
 }
 
-
 #hero {
     position: relative;
     width: 100%;
     height: 600px;
-
-    }
+}
 
 #hero_bg{
     position: absolute;
@@ -97,7 +99,6 @@ hr.style-one {
     flex-direction: column;
     align-items: center;
     width: 50%;
-
 }
 
 #contact_form{
@@ -105,7 +106,6 @@ hr.style-one {
     flex-direction: column;
     align-items: center;
     width: 50%;
-
 }
 
 .section_heading{
